openlibrary/src/styles/App.scss
@use '@carbon/react';
@use '@carbon/react/scss/spacing' as *;

.App {
  margin-top: $spacing-03;
  margin-bottom: $spacing-03;
  padding: $spacing-04;
}

.SearchBar {
  margin-bottom: $spacing-04;
  margin-top: $spacing-07;
  padding-left: $spacing-05;
}

.SearchBar__input {
  margin-left: $spacing-05;
}

.SearchBar__button {
  margin-left: $spacing-02;
}

.SearchBar__list {
  margin-top: $spacing-02;
}

.book-item {
  margin-bottom: $spacing-03;
  padding: $spacing-05;
  margin-top: $spacing-05;
  text-decoration: none;
  color: black;
  margin-left: 10%;
}

.book-name {
  font-weight: bolder;
}

.book-details {
  margin-top: $spacing-01;
}

.BookItems {
  margin-top: $spacing-02;
  margin-bottom: $spacing-07;
}

.BookInfoContainer {
  padding-right: 20%;
}

.book-item-content {
  padding: $spacing-02;
  margin-bottom: $spacing-04;
}

